<!--
Assignment 4
strings.xml
Lucnel Nordelus
-->
<resources>
    <string name="app_name">Project App 4</string>

    <string name="create_user_info">Create User Info</string>

    <string name="name_label">Name:</string>
    <string name="enter_name">Enter Name</string>

    <string name="email_label">Email:</string>
    <string name="enter_email">Enter Email</string>

    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="user_role">User Role</string>

    <string name="role_label">Role:</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="other">Other</string>

    <string name="next_button">Next</string>

    <string name="profile_title">Profile</string>

    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

    <string name="edit_user_info_title">Edit User Info</string>
    <string name="update_button">Update</string>
</resources>